# categorical-change-points

./: .gitignore  LICENSE  README.md
cpp/: afpCPD.cpp  getCumSum.cpp  peltCPD.cpp
python/: pyproject.toml  setup.cfg  setup.py
python/src/categoricalfpop/: bindings.cpp
