[metadata]
name = categoricalfpop
version = 0.1
description = Pruned change-point detection for categorical time series

[options]
zip_safe = True
include_package_data = True
python_requires = >= 3.6
install_requires =
    numpy
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[build_ext]
inplace=1